<resources>
    <string name="app_name">BeSafeTogether</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ai_help">AI Help</string>
    <string name="profile">profile</string>
    <string name="go_back">Go Back</string>
    <string name="main_button">Main Button</string>
    <string name="enter_your_stop_word">Enter your stop word</string>
    <string name="date_format">dd MMM, yyyy - HH:mm</string>
    <string name="stop_word_added">"Stop word was added"</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_your_account">Create your account</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="add_contact">Add Contact</string>
    <string name="no_contacts">No available contacts.</string>
    <string name="def_message_contacts">Set default message for contacts</string>
    <string name="message_hint">Type…</string>
    <string name="save_message">Save Message</string>
    <string name="receive_gps">Receive GPS</string>
    <string name="set_danger_place">Set Dangerous place</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="stop_word_exists">Stop word already exists.</string>
    <string name="contact_exists">Contact already exists.</string>
    <string name="name_empty">Name must not be empty</string>
    <string name="phone_empty">Phone must not be empty</string>
    <string name="name_not_empty">Name must not be empty</string>
    <string name="contact_added">Contact was added</string>
    <string name="enable_gps">Enable GPS to find your location</string>

    <string name="gps_status_enabled">GPS was enabled</string>
    <string name="gps_status_disabled">GPS was not enabled</string>

    <string name="permission_status_granted">Permissions are Granted</string>
    <string name="permission_status_denied">Permissions are Denied</string>
    <string name="permission_status_blocked">Permissions are Blocked</string>

    <string name="welcome">Welcome</string>
    <string name="start_scanning">Start scanning</string>
    <string name="scanning">Scanning…</string>
    <string name="home_page_details">Press the button to start scanning for stop words</string>
    <string name="requirements_use">Requirements to use</string>
    <string name="gps_enabled">GPS is enabled</string>
    <string name="stop_words_set">Stop words are set</string>
    <string name="contacts_set">Contacts are set</string>

    <string name="add">Add</string>
    <string name="my_stop_words">My Stop Words</string>
    <string name="contacts">Contacts</string>
    <string name="select_danger_level_to_write_a_comment">Select danger level to write a comment</string>
    <string name="all_comments">All comments</string>
    <string name="num_comments">4 comments</string>
    <string name="def_username">Alfarabi</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="def_date">22 September 2022</string>
    <string name="try_again_later">PLease try again later.</string>
    <string name="username_field_empty">Username field is empty</string>
    <string name="email_field_empty">Email field is empty</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="email_already_exists">This email is already taken</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="password_field_empty">Password field is empty or\nMore than 6 characters required</string>
    <string name="unable_to_login">Unable to login</string>
</resources>