<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageCard"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        app:cardCornerRadius="24dp"
        android:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/userNameTextView">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/imageCard"
        app:layout_constraintStart_toEndOf="@id/imageCard"
        app:layout_constraintTop_toTopOf="@id/imageCard"
        android:text="@string/def_username"
        android:textSize="16sp"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/averRatingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="0.0"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/dangerImageView"
        app:layout_constraintTop_toTopOf="@id/dangerImageView"
        app:layout_constraintBottom_toBottomOf="@id/dangerImageView"/>

    <ImageView
        android:id="@+id/dangerImageView"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_danger_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageCard"
        app:layout_constraintBottom_toBottomOf="@id/imageCard"/>

    <TextView
        android:id="@+id/commentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/lorem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCard"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:text="@string/def_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commentTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/dateTextView"/>
</androidx.constraintlayout.widget.ConstraintLayout>